# qrtool

./: .gitignore  README.md  pyproject.toml
qrtool/: cli.py
